@@ -1,0 +1,5 @@
+Configurable Progress bars, they may include percentage, elapsed time,
+and/or the estimated completion time. They work in terminals, in
+'Emacs' 'ESS', 'RStudio', 'Windows' 'Rgui' and the 'macOS' 'R.app'.
+The package also provides a 'C++' 'API', that works with or without
+'Rcpp'.
